# nbody

./: Cargo.toml
src/: body.rs  camera_system.rs  main.rs  scene.rs
