[package]
name = "bevy_hole"
version = "0.1.0"
authors = ["Pawel Rynowiecki <pawel.rynowiecki@anixe.pl>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.8.2"
rand = "0.7.3"
bevy = { git = "https://github.com/bevyengine/bevy.git", branch = "master" }

[profile.dev.package."*"]
opt-level = 3
